[package]
name = "khttp"
version = "0.1.0"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "web", "server", "client", "minimal"]
description = "A low-level synchronous HTTP/1.1 server/client library"
edition = "2024"
license = "MIT"
authors = ["karlivory"]
homepage = "https://github.com/karlivory/khttp"
repository = "https://github.com/karlivory/khttp"
readme = "README.md"
exclude = ["tests/**", "examples/**", ".github/**", ".vscode/**"]

[dependencies]
memchr = "2.7.5"

[lib]
name = "khttp"
path = "src/lib.rs"

[features]
default = ["epoll"]
client = []
epoll = ["libc"]

[dependencies.libc]
version = "0.2.174"
optional = true

[workspace]
members = [".", "examples/*"]

[[example]]
name = "reverse_proxy"
required-features = ["client"]
